# structured-agents-pydanticai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  EXTENDING_TOOLS.md  FAILURE_MODES.md  PROMPTING_GUIDE.md
examples/: change_requests.jsonl  incidents.jsonl
src/: cli.py
src/agents/incident_triage/: agent.py  models.py  prompts.py  tools.py
src/agents/risk_classifier/: agent.py  models.py  prompts.py  rules.py  tools.py
src/api/: main.py
src/eval/: gold_cases.jsonl  metrics.py  run_eval.py
src/graph/: incident_graph.py  nodes.py  policies.py  risk_graph.py  state.py
src/guardrails/: pii.py  safety.py  schema_repair.py
src/utils/: config.py  logging.py  tracing.py
tests/: test_graph_smoke.py  test_guardrails.py  test_models.py
