[project]
name = "structured-agents-pydanticai"
version = "0.1.0"
description = "Typed, guarded, and orchestrated agents for enterprise workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0,<3.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "langgraph>=0.2.30,<0.3.0",
  "pydantic-ai>=0.0.14,<0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
